--- a/hotel.html
+++ b/hotel.html
@@ -45,21 +45,21 @@
                 <path fill="#FFFFFF"
                   d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z" />
               </svg>
-              <p>Бассейн</p>
+              Бассейн
             </label>
             <label id="parking" class="checkbox-off">
               <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23">
                 <path fill="#FFFFFF"
                   d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
               </svg>
-              <p>Парковка</p>
+              Парковка
             </label>
             <label id="Internet" class="checkbox-off">
               <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23">
                 <path fill="#FFFFFF"
                   d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z" />
               </svg>
-              <p>WI-FI</p>
+              WI-FI
             </label>
         </div>
         <div class="services-infrastructure__home">
@@ -71,7 +71,7 @@
                 <path fill="#FFFFFF"
                   d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z" />
               </svg>
-              <p>Гостиница</p>
+            Гостиница
             </label>
             <label id="motel" class="checkbox-on">
               <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
@@ -80,7 +80,7 @@
                 <path fill="#FFFFFF"
                   d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z" />
               </svg>
-              <p>Мотель</p>
+              Мотель
             </label>
             <label id="apartments" class="checkbox-on">
               <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
@@ -89,7 +89,7 @@
                 <path fill="#FFFFFF"
                   d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z" />
               </svg>
-              <p>Апартаменты</p>
+              Апартаменты
             </label>
         </div>
       </form>
