--- a/hotel.html
+++ b/hotel.html
@@ -39,12 +39,15 @@
           <h2>Инфраструктура:</h2>
 
             <label id="pool" class="checkbox-on">
-              <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
+                <input type="checkbox">
+              <span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="27" height="23" viewBox="0 0 27 23">
                 <path fill="#FFFFFF"
                   d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z" />
                 <path fill="#FFFFFF"
                   d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z" />
               </svg>
+              </span>
               Бассейн
             </label>
             <label id="parking" class="checkbox-off">
@@ -92,7 +95,6 @@
               Апартаменты
             </label>
         </div>
-      </form>
       <div class="filter-range">
         <div class="filter-range-title">Стоимость в сутки (р):</div>
         <div class="price-controls">
@@ -108,6 +110,7 @@
         </div>
         <button class="btn-transparent" type="submit">Показать</button>
       </div>
+    </form>
     </section>
     <main>
       <section class="compare">
